--- a/URCell/projects/multi_ur.yaml
+++ b/URCell/projects/multi_ur.yaml
@@ -8,9 +8,10 @@ robots:
     enable: true
 
   - name: robot2
-    type: igus_rebel
+    type: igus_rebel_6dof
     xyz: [0, 1, 0]
     rpy: [0, 0, 0]
     ip: 192.168.88.201
     port: 70000
-    enable: true
+    enable: false
+    
