--- a/URCell/projects/spawns/ur3_joint_limits.yaml
+++ b/URCell/projects/spawns/ur3_joint_limits.yaml
@@ -5,55 +5,55 @@ joint_limits:
     has_position_limits: false
     has_velocity_limits: false
   shoulder_pan_joint:
-    min_position: '!degrees -360.0'
-    max_position: '!degrees 360.0'
+    min_position: !degrees '-360.0'
+    max_position: !degrees '360.0'
     max_effort: 56.0
-    max_velocity: '!degrees 180.0'
+    max_velocity: !degrees '180.0'
     has_acceleration_limits: false
     has_effort_limits: true
     has_position_limits: true
     has_velocity_limits: true
   shoulder_lift_joint:
-    min_position: '!degrees -360.0'
-    max_position: '!degrees 360.0'
+    min_position: !degrees '-360.0'
+    max_position: !degrees '360.0'
     max_effort: 56.0
-    max_velocity: '!degrees 180.0'
+    max_velocity: !degrees '180.0'
     has_acceleration_limits: false
     has_effort_limits: true
     has_position_limits: true
     has_velocity_limits: true
   elbow_joint:
-    min_position: '!degrees -180.0'
-    max_position: '!degrees 180.0'
+    min_position: !degrees '-180.0'
+    max_position: !degrees '180.0'
     max_effort: 28.0
-    max_velocity: '!degrees 180.0'
+    max_velocity: !degrees '180.0'
     has_acceleration_limits: false
     has_effort_limits: true
     has_position_limits: true
     has_velocity_limits: true
   wrist_1_joint:
-    min_position: '!degrees -360.0'
-    max_position: '!degrees 360.0'
+    min_position: !degrees '-360.0'
+    max_position: !degrees '360.0'
     max_effort: 12.0
-    max_velocity: '!degrees 360.0'
+    max_velocity: !degrees '360.0'
     has_acceleration_limits: false
     has_effort_limits: true
     has_position_limits: true
     has_velocity_limits: true
   wrist_2_joint:
-    min_position: '!degrees -360.0'
-    max_position: '!degrees 360.0'
+    min_position: !degrees '-360.0'
+    max_position: !degrees '360.0'
     max_effort: 12.0
-    max_velocity: '!degrees 360.0'
+    max_velocity: !degrees '360.0'
     has_acceleration_limits: false
     has_effort_limits: true
     has_position_limits: true
     has_velocity_limits: true
   wrist_3_joint:
-    min_position: '!degrees -360.0'
-    max_position: '!degrees 360.0'
+    min_position: !degrees '-360.0'
+    max_position: !degrees '360.0'
     max_effort: 12.0
-    max_velocity: '!degrees 360.0'
+    max_velocity: !degrees '360.0'
     has_acceleration_limits: false
     has_effort_limits: true
     has_position_limits: true
